syntax = "proto3";

option go_package = "educloud-web";

import "protos/rest/status.proto";
import "protos/rest/quiz.proto";
import "protos/rest/homework.proto";
import "protos/rest/chat.proto";
import "protos/rest/user.proto";


service RestPresenterClassService {
    rpc CreateClass (ClassCreationRequest) returns (ClassCreationResponse);
    rpc UpdateClass (ClassUpdateRequest) returns (RestStatus);
    rpc DeleteClass (ClassUuid) returns (RestStatus);
    rpc GetClass (ClassUuid) returns (RestClass);
    rpc GetClasses (Empty) returns (GetClassesResponse);

    rpc StartClass (ClassUuid) returns (stream RestChatMessage);
    rpc EndClass (ClassUuid) returns (RestStatus);
}


message RestClass {
    string name = 1;
    string topic = 2;
    repeated RestQuizQuestion quizQuestion = 3;
    repeated RestHomework homework = 4;
    bytes presentation = 5;
}

message ClassCreationRequest {
    RestClass class = 1;
}

message ClassCreationResponse {
    int32 classUuid = 1;
    int32 secretCode = 2;
    RestStatus error = 3;
}

message ClassUpdateRequest {
    int32 classUuid = 1;
    RestClass class = 2;
}

message ClassUuid {
    int32 classUuid = 1;
}

message GetClassesResponse{
    repeated ClassWithUuid classes = 1;
}

message ClassWithUuid {
    int32 classUuid = 1;
    RestClass class = 2;
}

message Empty{}

